@@ -26,63 +26,32 @@ package de.gematik.demis.notification.builder.demis.fhir.notification.builder.in
  * #L%
  */
 
+import static de.gematik.demis.notification.builder.demis.fhir.notification.utils.DemisConstants.NOTIFICATION_7_3_COMPOSITION_TITLE;
 import static de.gematik.demis.notification.builder.demis.fhir.notification.utils.DemisConstants.PROFILE_NOTIFICATION_LABORATORY_NON_NOMINAL;
 import static de.gematik.demis.notification.builder.demis.fhir.notification.utils.DemisConstants.RECEPTION_TIME_STAMP_TYPE;
 
-import java.util.List;
 import javax.annotation.Nonnull;
-import org.hl7.fhir.r4.model.Coding;
 import org.hl7.fhir.r4.model.Composition;
 import org.hl7.fhir.r4.model.DiagnosticReport;
 import org.hl7.fhir.r4.model.Extension;
-import org.hl7.fhir.r4.model.Identifier;
 import org.hl7.fhir.r4.model.Patient;
 import org.hl7.fhir.r4.model.PractitionerRole;
-import org.hl7.fhir.r4.model.Reference;
 
-public class NonNominalCompositionBuilder extends NotificationLaboratoryDataBuilder {
+public class NotificationLaboratoryNonNominalDataBuilder extends NotificationLaboratoryDataBuilder {
 
   public static Composition deepCopy(
       @Nonnull final Composition original,
       @Nonnull final PractitionerRole author,
       @Nonnull final Patient subject,
       @Nonnull final DiagnosticReport diagnosticReport) {
-    final NonNominalCompositionBuilder builder = new NonNominalCompositionBuilder();
-    builder.setMetaUrl(original.getMeta().getProfile().getFirst().getValueAsString());
-    builder.setNotificationId(original.getId());
+    final NotificationLaboratoryNonNominalDataBuilder builder =
+        new NotificationLaboratoryNonNominalDataBuilder();
 
-    final Coding codingFirstRep = original.getType().getCodingFirstRep();
-    builder.setTypeCode(codingFirstRep);
+    builder.deepCopyFields(original, author, subject, diagnosticReport);
 
-    final Coding category = original.getCategoryFirstRep().getCodingFirstRep();
-    builder.setCategoryCode(category);
-
-    builder.setIdentifierSystem(original.getIdentifier().getSystem());
-    builder.setIdentifierValue(original.getIdentifier().getValue());
-
-    builder.setCompositionStatus(original.getStatus());
-
-    builder.setTitle(original.getTitle());
-    builder.setDateTimeType(original.getDateElement());
-
-    List<Composition.CompositionRelatesToComponent> relatesTo = original.getRelatesTo();
-    if (!relatesTo.isEmpty()) {
-      final Composition.CompositionRelatesToComponent relatesToElement = relatesTo.getFirst();
-      final Reference targetReference = relatesToElement.getTargetReference();
-      final Identifier identifier = targetReference.getIdentifier();
-
-      builder.setRelatesToCode(relatesToElement.getCode());
-      builder.setRelatesToReferenceType(targetReference.getType());
-      builder.setRelatesToNotificationId(identifier.getValue());
+    if (original.hasMeta() && !original.getMeta().getProfile().isEmpty()) {
+      builder.setMetaUrl(original.getMeta().getProfile().get(0).getValueAsString());
     }
-
-    builder.setNotifierRole(author);
-    builder.setNotifiedPerson(subject);
-
-    builder.setLaboratoryReport(diagnosticReport);
-    final Composition.SectionComponent section = original.getSectionFirstRep();
-    final Coding sectionCode = section.getCode().getCodingFirstRep();
-    builder.setSectionCode(sectionCode);
 
     Extension extensionByUrl = original.getExtensionByUrl(RECEPTION_TIME_STAMP_TYPE);
     if (extensionByUrl != null) {
@@ -96,5 +65,10 @@ public class NonNominalCompositionBuilder extends NotificationLaboratoryDataBuil
   @Override
   protected String getDefaultProfileUrl() {
     return PROFILE_NOTIFICATION_LABORATORY_NON_NOMINAL;
+  }
+
+  @Override
+  protected String getDefaultTitle() {
+    return NOTIFICATION_7_3_COMPOSITION_TITLE;
   }
 }
